AntlrGenerated/ChocopyParser.java
// Generated from C:/Users/diego/Documents/Lenguajes/GraphiGO/grammar\Chocopy.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ChocopyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NOT=1, AND=2, OR=3, IF=4, ELIF=5, ELSE=6, INPUT=7, PAR_IZQ=8, PAR_DER=9, 
		LEN=10, COMMA=11, COR_IZQ=12, COR_DER=13, PUNTO=14, MENOS=15, CLASS=16, 
		DOS_PUNTOS=17, PASS=18, DEF=19, EJECUTA=20, GLOBAL=21, NONLOCAL=22, DOBLE_IGUAL=23, 
		IGUAL=24, WHILE=25, FOR=26, IN=27, RETURN=28, PRINT=29, MAS=30, MULTIPLICA=31, 
		DIV_ENTERA=32, MODULO=33, DIFERENTE=34, MENOR_IGUAL=35, MAYOR_IGUAL=36, 
		MENOR=37, MAYOR=38, IS=39, NONE=40, TRUE=41, FALSE=42, INTEGER=43, ID=44, 
		IDSTRING=45, STRING=46, LINE_COMMENT=47, SKIP_=48, NEWLINE=49, INDENT=50, 
		DEDENT=51;
	public static final int
		RULE_program = 0, RULE_class_def = 1, RULE_class_body = 2, RULE_class_body_def = 3, 
		RULE_func_def = 4, RULE_func_body = 5, RULE_typed_var = 6, RULE_type = 7, 
		RULE_global_decl = 8, RULE_nonlocal_decl = 9, RULE_var_def = 10, RULE_stmt = 11, 
		RULE_end_file = 12, RULE_simple_stmt = 13, RULE_block = 14, RULE_literal = 15, 
		RULE_expr = 16, RULE_expr_or = 17, RULE_expr_and = 18, RULE_simple_expr = 19, 
		RULE_cexpr = 20, RULE_cexpr_sum = 21, RULE_cexpr_mul = 22, RULE_simple_value = 23, 
		RULE_cmp = 24, RULE_op_suma = 25, RULE_op_mul = 26, RULE_target = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_def", "class_body", "class_body_def", "func_def", "func_body", 
			"typed_var", "type", "global_decl", "nonlocal_decl", "var_def", "stmt", 
			"end_file", "simple_stmt", "block", "literal", "expr", "expr_or", "expr_and", 
			"simple_expr", "cexpr", "cexpr_sum", "cexpr_mul", "simple_value", "cmp", 
			"op_suma", "op_mul", "target"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'not'", "'and'", "'or'", "'if'", "'elif'", "'else'", "'input'", 
			"'('", "')'", "'len'", "','", "'['", "']'", "'.'", "'-'", "'class'", 
			"':'", "'pass'", "'def'", "'->'", "'global'", "'nonlocal'", "'=='", "'='", 
			"'while'", "'for'", "'in'", "'return'", "'print'", "'+'", "'*'", "'//'", 
			"'%'", "'!='", "'<='", "'>='", "'<'", "'>'", "'is'", "'None'", "'True'", 
			"'False'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NOT", "AND", "OR", "IF", "ELIF", "ELSE", "INPUT", "PAR_IZQ", "PAR_DER", 
			"LEN", "COMMA", "COR_IZQ", "COR_DER", "PUNTO", "MENOS", "CLASS", "DOS_PUNTOS", 
			"PASS", "DEF", "EJECUTA", "GLOBAL", "NONLOCAL", "DOBLE_IGUAL", "IGUAL", 
			"WHILE", "FOR", "IN", "RETURN", "PRINT", "MAS", "MULTIPLICA", "DIV_ENTERA", 
			"MODULO", "DIFERENTE", "MENOR_IGUAL", "MAYOR_IGUAL", "MENOR", "MAYOR", 
			"IS", "NONE", "TRUE", "FALSE", "INTEGER", "ID", "IDSTRING", "STRING", 
			"LINE_COMMENT", "SKIP_", "NEWLINE", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Chocopy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ChocopyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Var_defContext var_def() {
			return getRuleContext(Var_defContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public Class_defContext class_def() {
			return getRuleContext(Class_defContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ChocopyParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) return ((ChocopyVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				var_def();
				setState(57);
				program();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				func_def();
				setState(60);
				program();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				class_def();
				setState(63);
				program();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << IF) | (1L << INPUT) | (1L << PAR_IZQ) | (1L << LEN) | (1L << COR_IZQ) | (1L << MENOS) | (1L << PASS) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << PRINT) | (1L << NONE) | (1L << TRUE) | (1L << FALSE) | (1L << INTEGER) | (1L << ID) | (1L << IDSTRING) | (1L << STRING))) != 0)) {
					{
					{
					setState(65);
					stmt();
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_defContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(ChocopyParser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(ChocopyParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ChocopyParser.ID, i);
		}
		public TerminalNode PAR_IZQ() { return getToken(ChocopyParser.PAR_IZQ, 0); }
		public TerminalNode PAR_DER() { return getToken(ChocopyParser.PAR_DER, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(ChocopyParser.DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(ChocopyParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(ChocopyParser.INDENT, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(ChocopyParser.DEDENT, 0); }
		public Class_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterClass_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitClass_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) {
				try {
					return ((ChocopyVisitor<? extends T>)visitor).visitClass_def(this);
				} catch (Exception e) {
					e.printStackTrace();
					return null;
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final Class_defContext class_def() throws RecognitionException {
		Class_defContext _localctx = new Class_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(CLASS);
			setState(75);
			match(ID);
			setState(76);
			match(PAR_IZQ);
			setState(77);
			match(ID);
			setState(78);
			match(PAR_DER);
			setState(79);
			match(DOS_PUNTOS);
			setState(80);
			match(NEWLINE);
			setState(81);
			match(INDENT);
			setState(82);
			class_body();
			setState(83);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public TerminalNode PASS() { return getToken(ChocopyParser.PASS, 0); }
		public TerminalNode NEWLINE() { return getToken(ChocopyParser.NEWLINE, 0); }
		public Class_body_defContext class_body_def() {
			return getRuleContext(Class_body_defContext.class,0);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitClass_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) {
				try {
					return ((ChocopyVisitor<? extends T>)visitor).visitClass_body(this);
				} catch (Exception e) {
					e.printStackTrace();
					return null;
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_body);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PASS:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(PASS);
				setState(86);
				match(NEWLINE);
				}
				break;
			case DEF:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				class_body_def();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_body_defContext extends ParserRuleContext {
		public Var_defContext var_def() {
			return getRuleContext(Var_defContext.class,0);
		}
		public Class_body_defContext class_body_def() {
			return getRuleContext(Class_body_defContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public Class_body_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterClass_body_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitClass_body_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) {
				try {
					return ((ChocopyVisitor<? extends T>)visitor).visitClass_body_def(this);
				} catch (Exception e) {
					e.printStackTrace();
					return null;
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final Class_body_defContext class_body_def() throws RecognitionException {
		Class_body_defContext _localctx = new Class_body_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_class_body_def);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				var_def();
				setState(91);
				class_body_def();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				func_def();
				setState(94);
				class_body_def();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				var_def();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				func_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_defContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ChocopyParser.DEF, 0); }
		public TerminalNode ID() { return getToken(ChocopyParser.ID, 0); }
		public TerminalNode PAR_IZQ() { return getToken(ChocopyParser.PAR_IZQ, 0); }
		public TerminalNode PAR_DER() { return getToken(ChocopyParser.PAR_DER, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(ChocopyParser.DOS_PUNTOS, 0); }
		public TerminalNode NEWLINE() { return getToken(ChocopyParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(ChocopyParser.INDENT, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(ChocopyParser.DEDENT, 0); }
		public List<Typed_varContext> typed_var() {
			return getRuleContexts(Typed_varContext.class);
		}
		public Typed_varContext typed_var(int i) {
			return getRuleContext(Typed_varContext.class,i);
		}
		public TerminalNode EJECUTA() { return getToken(ChocopyParser.EJECUTA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(ChocopyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ChocopyParser.COMMA, i);
		}
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterFunc_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitFunc_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) {
				try {
					return ((ChocopyVisitor<? extends T>)visitor).visitFunc_def(this);
				} catch (Exception e) {
					e.printStackTrace();
					return null;
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final Func_defContext func_def() throws RecognitionException {
		Func_defContext _localctx = new Func_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(DEF);
			setState(101);
			match(ID);
			setState(102);
			match(PAR_IZQ);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(103);
				typed_var();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(104);
					match(COMMA);
					setState(105);
					typed_var();
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(113);
			match(PAR_DER);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EJECUTA) {
				{
				setState(114);
				match(EJECUTA);
				setState(115);
				type();
				}
			}

			setState(118);
			match(DOS_PUNTOS);
			setState(119);
			match(NEWLINE);
			setState(120);
			match(INDENT);
			setState(121);
			func_body();
			setState(122);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_bodyContext extends ParserRuleContext {
		public Global_declContext global_decl() {
			return getRuleContext(Global_declContext.class,0);
		}
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public Nonlocal_declContext nonlocal_decl() {
			return getRuleContext(Nonlocal_declContext.class,0);
		}
		public Var_defContext var_def() {
			return getRuleContext(Var_defContext.class,0);
		}
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterFunc_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitFunc_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) {
				try {
					return ((ChocopyVisitor<? extends T>)visitor).visitFunc_body(this);
				} catch (Exception e) {
					e.printStackTrace();
					return null;
				}
			}
			else return visitor.visitChildren(this);
		}
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_body);
		int _la;
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				global_decl();
				setState(125);
				func_body();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				nonlocal_decl();
				setState(128);
				func_body();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				var_def();
				setState(131);
				func_body();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				func_def();
				setState(134);
				func_body();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(136);
					stmt();
					}
					}
					setState(139); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << IF) | (1L << INPUT) | (1L << PAR_IZQ) | (1L << LEN) | (1L << COR_IZQ) | (1L << MENOS) | (1L << PASS) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << PRINT) | (1L << NONE) | (1L << TRUE) | (1L << FALSE) | (1L << INTEGER) | (1L << ID) | (1L << IDSTRING) | (1L << STRING))) != 0) );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typed_varContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ChocopyParser.ID, 0); }
		public TerminalNode DOS_PUNTOS() { return getToken(ChocopyParser.DOS_PUNTOS, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Typed_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typed_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).enterTyped_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ChocopyListener ) ((ChocopyListener)listener).exitTyped_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ChocopyVisitor ) return ((ChocopyVisitor<? extends T>)visitor).visitTyped_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Typed_varContext typed_var() throws RecognitionException {
		Typed_varContext _localctx = new Typed_varContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typed_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(ID);
			setState(144);
			match(DOS_PUNTOS);
			setState(145);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
